--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -41,6 +41,7 @@ body {
     height: 100%;
     overflow-y: auto;
     background-color: #101010;
+    padding-bottom: 50px;
 }
 
 h1, .logo { 
